# django-byo-react

./: MANIFEST.in  README.md  pyproject.toml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pipeline.yml  release.yml  test.yml
django_byo_react/templates/django_byo_react/includes/: byo_react.html
django_byo_react/templatetags/: byo_react.py
tests/: test_django_byo_react.py
